--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт web-студії "Web DECO"</title>
 </head>
-<body>
+<body background="images/bd.jpg">
     
 </body>
 </html>
