--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <table border="1" align="center" cellpadding="10">
         <tr>
             <td colspan ="2" height="150" align="right">
-                Сайт web-студії "Web-DECO				
+              <img src="images/logo.png" height="140" width="140" align="left">
+              <font color="Maroon"><h1 class="shadowtext">сайт студії "Web DECO"</h1></font> 				
             </td>
         </tr>
         <tr>
