--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">Gorizontal menu</td>
+            <td colspan="2">
+                <font size ="4">
+                    <b>
+                        <a href="#">Головна</a>&nbsp; &nbsp;
+                        <a href="#">Фотогалерея</a>&nbsp; &nbsp;
+                        <a href="#">Телефони</a>&nbsp; &nbsp;
+                        <a href="#">Статистики</a>&nbsp; &nbsp;
+                        <a href="#">Зареєстровані</a>&nbsp; &nbsp;
+                    </b>
+                </font>
+            </td>
         </tr>
         <tr>
             <td width="30%" valign="top">Left menu</td>
