--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
             <td width="70%">Site's text</td>
         </tr>
         <tr>
-            <td colspan="2" valign="middle" height="90">Site's bottom</td>
+            <td colspan="2" valign="middle" height="90">
+                <td colspan="2" valign="middle" height="90">
+					<font size="4">
+						Сайт розробив Ткачук Роман
+					</font>
+				</td>
+            </td>
         </tr>
     </table>
 </body>
