09 - Добавив стиль-тінь

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .shadowtext{
+        text-shadow: 1px 3px 2px white, 0 0 1em red;
+        color: #210042;
+        font-size: 2em;
+        }
+    </style>
     <title>Сайт web-студії "Web DECO"</title>
 </head>
 <body background="images/bd.jpg">
