--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <td width="70%">Site's text</td>
         </tr>
         <tr>
-            <td colspan="2" valign="middle" height="90">
-                <td colspan="2" valign="middle" height="90">
-					<font size="4">
-						Сайт розробив Ткачук Роман
-					</font>
-				</td>
+            <td background="images/bg-3.jpg" colspan="2" valign="middle" height="90">
+                
+				<font size="4">
+					Сайт розробив Ткачук Роман
+				</font>
+				
             </td>
         </tr>
     </table>
